welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:6: error: not found: value vuBiscuit
	if (vuBiscuit()=false) {
            ^